--- a/ExoticRose/Login.xaml
+++ b/ExoticRose/Login.xaml
@@ -12,8 +12,8 @@
             </Grid.RowDefinitions>
             <Image Source="Logo.png" Grid.Row="0" WidthRequest="350"/>
             <StackLayout Grid.Row="1" Padding="10,20">
-                <Entry Placeholder="Usuario" PlaceholderColor="Gray" TextColor="Black"/>
-                <Entry Placeholder="Contraseña" PlaceholderColor="Gray" TextColor="Black" IsPassword="True"/>
+                <Entry Placeholder="Usuario" PlaceholderColor="Gray" TextColor="Black" x:Name="txtUsuario"/>
+                <Entry Placeholder="Contraseña" PlaceholderColor="Gray" TextColor="Black" IsPassword="True" x:Name="txtContrasena"/>
                 <Button x:Name="btIniciar" Text="Iniciar sesión" BackgroundColor="#005398" TextColor="White" BorderRadius="40" Margin="0,10,0,0" Clicked="btIniciar_Clicked"/>
                 <StackLayout Orientation="Horizontal">
                     <Label Text="¿recuperar contraseña?" TextColor="#005398"/>
